# unit-testing-with-python3

./: LICENSE  Pipfile  README.md  pyproject.toml
module_1_unit_test_fundamentals/phonenumbers/: phonebook.py  test_phonebook.py
module_2_unit_testing_why_and_when/: What is unit testing for?.txt
module_3_unit_testing_with_pytest/: phonebook.py  test_phonebook.py
module_4_testable_docs_with_doctest/: yatzy.py
module_5_test_doubles_mocks_stubs_and_fakes/HtmlConverter/: html_pages.py  test_html_pages.py
module_5_test_doubles_mocks_stubs_and_fakes/TirePressureMonkeypatch/: alarm.py  sensor.py  test_alarm.py
phonenumbers/: phonebook.py  test_phonebook.py
