[tool.poetry]
name = "unit-testing-with-python3"
version = "0.1.0"
description = "Unit Testing With Python 3 - Pluralsight Course"
authors = ["Alexander Grant <agrant@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
